tests/should_fail/cyclic_struct_size.sd
A :: struct {
    b: B;
}

B :: struct {
    c: C;
}

C :: struct {
    d: D;
}

D :: struct {
    a: A;    // <-- Should not be allowed
}

main :: () {
    
}